# bsbox

./: .dockerignore  .gitignore  CLAUDE.md  README.md  TESTING_RESULTS.md  dev_stack.sh  start.sh  tox.backend.ini  tox.deploy.ini  tox.frontend.ini  tox.ini
.cursor/commands/: commit-and-push.md  commit-message.md  commit.md  commit.mdc
.cursor/plans/: 2025-11-09-bsbox-slim-stack-execution.md  bsbox-minimal-simplification.md  meeting-hotspot-implementation.md  meeting-hotspot-initial-setup.md  testing-dev-automation-plan-executed.md  testing-dev-automation-plan.md
.cursor/rules/: backend.md  commit.md  deployment.md  frontend.md
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  meeting_hotspot.db  pyproject.toml  requirements.txt  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_meeting_device_to_engagement.py  0003_meetings_uuid_pk.py  0004_add_location_teams.py  0005_remove_participant_expires_at.py  0006_extract_ms_teams_meeting.py  0007_simplify_architecture.py  173e0e19449b_baseline.py  17e35114e360_add_meeting_summaries_table.py  49397b303f7e_add_unique_start_ts.py  6d7f0b908c2e_utc_timestamps.py  d0d69723b9a2_remove_redundant_device_fingerprint_.py
backend/app/: __init__.py  cache.py  config.py  database.py  db.py  db_utils.py  dependencies.py  logging_config.py  main.py  migrations.py  ws.py
backend/app/config/: settings.py
backend/app/controllers/: __init__.py  cities.py  health.py  meeting_controller.py  meeting_rooms.py  meetings.py  realtime.py  users.py  visit.py
backend/app/models/: __init__.py  base.py  city.py  engagement_dto.py  engagement_sample.py  meeting.py  meeting_room.py  meeting_summary.py  ms_teams_meeting.py  participant.py
backend/app/repos/: __init__.py  city_repo.py  engagement_repo.py  meeting_repo.py  meeting_room_repo.py  meeting_summary_repo.py  ms_teams_meeting_repo.py  participant_repo.py
backend/app/schema/: __init__.py  base.py  city.py  engagement.py  meeting.py  meeting_room.py  ms_teams_meeting.py  pagination.py  participant.py  teams.py  visit.py  websocket.py
backend/app/schema/common/: __init__.py
backend/app/schema/engagement/: __init__.py  messages.py  models.py
backend/app/schema/integration/: __init__.py  models.py  parsers.py
backend/app/schema/location/: __init__.py  models.py  requests.py
backend/app/schema/meeting/: __init__.py  models.py  requests.py
backend/app/schema/participant/: __init__.py  models.py  requests.py  types.py
backend/app/schema/visit/: __init__.py  requests.py  responses.py
backend/app/schema/websocket/: __init__.py  base.py  broadcasts.py  requests.py  responses.py
backend/app/schemas/: meeting.py
backend/app/scripts/: poller.py  simulate_activity.py
backend/app/services/: __init__.py  city_service.py  engagement_service.py  meeting_room_service.py  meeting_service.py  meeting_summary_service.py  participant_service.py  teams_parser.py
backend/app/services/engagement/: __init__.py
backend/app/services/engagement/bucketing/: __init__.py  bucket_manager.py
backend/app/services/engagement/smoothing/: __init__.py  base.py  factory.py  kalman.py  no_smoothing.py
backend/app/services/engagement/summary/: __init__.py  snapshot_builder.py
backend/app/static/: index.html
backend/app/static/assets/: index-Do5-4PZr.js
backend/app/utils/: datetime.py  hotspot_monitor.py  lifespan.py
backend/app/ws/: __init__.py  context.py  factory.py  handlers.py  processor.py  protocol.py  types.py
backend/app/ws/background/: __init__.py  factory.py  lifecycle.py  periodic_broadcaster.py
backend/app/ws/controllers/: __init__.py  connection.py  routing.py
backend/app/ws/lifecycle/: __init__.py  coordinator.py
backend/app/ws/lifecycle/managers/: __init__.py  stream.py  watcher.py
backend/app/ws/lifecycle/validators/: __init__.py  connection.py  timing.py
backend/app/ws/repos/: __init__.py  broadcast.py  subscription.py
backend/app/ws/services/: __init__.py  join.py  leave.py  ping.py  protocol.py  status.py
backend/app/ws/shared/: __init__.py  factory.py
backend/app/ws/transport/: __init__.py  context.py
backend/app/ws/transport/lifecycle/: __init__.py  coordinator.py  validators.py  watcher.py
backend/samples/: sample_clients.json
backend/scripts/: __init__.py  demo.py  run_dev.py  start_app.py
backend/tests/: conftest.py  test_app.py  test_datetime_utils.py  test_endpoints.py  test_hotspot_monitor.py  test_meeting_repo.py  test_meeting_service.py  test_meeting_timing.py  test_models.py  test_teams_parser.py  test_websocket_models.py  test_ws_lifecycle.py  test_ws_processor.py  test_ws_snapshot_delta.py
deployment/: .env.example  README.md  common.sh  start-dev.sh  start-local.sh  start-prod.sh
deployment/ansible/: playbook.yml
deployment/docker/: .dockerignore  backend.Dockerfile  (+6 more)
docs/: API_DOCUMENTATION.md  testing_strategy.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: deploy_build.sh  dev_backend.sh  dev_frontend.sh  dev_stack.sh  pi_deploy.sh  run_dev.py
(+132 files in other folders)
