[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-hotspot-backend"
version = "0.1.0"
description = "Litestar backend for meeting hotspot analytics"
requires-python = ">=3.11,<3.13"
dependencies = [
    "litestar>=2.10,<3",
    "sqlmodel==0.0.16",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.19,<0.21",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "uvicorn[standard]>=0.30,<1",
    "python-dotenv>=1.0,<2",
    "alembic>=1.13,<2",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = ["app.repos.*"]
ignore_errors = true

