[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muda-meter"
version = "0.1.0"
description = "Litestar meetings API with engagement tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]",
    "sqlalchemy>=2.0.45,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "anyio>=4.8.0,<5.0.0",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
muda-server = "scripts.start_app:main"

